fixed spacing on image gallery and main image

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1174,10 +1174,9 @@ a:focus,.focus a{
 				&.woocommerce-product-gallery--columns-4{
 					.flex-control-nav{
 						&.flex-control-thumbs{
-							margin: 0;
 							align-items: space-between;
 							position:relative;
-							top: 0;
+							bottom: auto;
 							li{
 								float: none !important;
 						    	margin-right: 0 !important;
